--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-
     <meta charset="UTF-8">
     <title>Mini Ninja Video Poker</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,11 +19,11 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center">
-				<a href="saveCard0" href="#"><img id ="card0" src="img/back.png" alt="" class="card"></a>
-				<a href="saveCard1" href="#"><img id="card1" src="img/back.png" alt="" class="card"></a>
-				<a href="saveCard2" href="#"><img id="card2" src="img/back.png" alt="" class="card"></a>
-				<a href="saveCard3" href="#"><img id="card3" src="img/back.png" alt="" class="card"></a>
-				<a href="saveCard4" href="#"><img id="card4" src="img/back.png" alt="" class="card"></a>
+				<a id="saveCard0" href="#"><img id ="card0" src="img/back.png" alt="" class="card"></a>
+				<a id="saveCard1" href="#"><img id="card1" src="img/back.png" alt="" class="card"></a>
+				<a id="saveCard2" href="#"><img id="card2" src="img/back.png" alt="" class="card"></a>
+				<a id="saveCard3" href="#"><img id="card3" src="img/back.png" alt="" class="card"></a>
+				<a id="saveCard4" href="#"><img id="card4" src="img/back.png" alt="" class="card"></a>
 			</div>
 		</div>
 		<div class="row">
