--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 			<div class="col-md-6">
 				<strong>Balance:</strong> <span id="balance"></span>
 			</div>
+			<div class="col-md-4 text-center">
+				<h2 id='handResult'></h2>
+			</div>
 			<div class="col-md-6 text-right">
 				<strong>Bet:</strong> <input type="number" id="bet"/> 
 			</div>
