--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<br><button id="deal" class="btn btn-success">Deal</button>
+				<button id="replay" class="btn btn-success hidden">Play Again</button>
 			</div>
 		</div>
 		<div>
 			<h2>Pay Outs</h2>
-			<table class="table">
+			<table class="table table-bordered">
 				<thead>
 					<tr>
 						<th>Hand</th>
