--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 
 </head>
 <body>
-	<div class="container div">
+
+	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-4">
 				<strong>Balance:</strong> <span id="balance"></span>
 			</div>
-			<div class="col-md-6 text-center">
+			<div class="col-md-4 text-center">
 				<h2 id='handResult'></h2>
 			</div>
-			<div class="col-md-6 text-right">
+			<div class="col-md-4 text-right">
 				<strong>Bet:</strong> <input type="number" id="bet"/> 
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2 text-center">
+			<div class="col-md-6 col-md-offset-3 text-center">
 				<a id="saveCard0" href="#"><img id ="card0" src="img/back.png" alt="" class="card"></a>
 				<a id="saveCard1" href="#"><img id="card1" src="img/back.png" alt="" class="card"></a>
 				<a id="saveCard2" href="#"><img id="card2" src="img/back.png" alt="" class="card"></a>
