--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</div>
 		<div>
 			<h2>Pay Outs</h2>
-			<table class="table table-bordered">
+			<table class="table table-bordered td">
 				<thead>
 					<tr>
 						<th>Hand</th>
