--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4">
-				<strong>Balance:</strong> <span id="balance"></span>
+			<div class="col-md-6">
+				<h2><strong>Balance:</strong> <span id="balance"></span></h2>
 			</div>
-			<div class="col-md-4 text-center">
+			<div class="col-md-6 text-center">
 				<h2 id='handResult'></h2>
 			</div>
-			<div class="col-md-4 text-right">
-				<strong>Bet:</strong> <input type="number" id="bet"/> 
+			<div class="col-md-6 text-right">
+				<h2><strong>Bet:</strong> <input type="number" id="bet"/></h2> 
 			</div>
 		</div>
 		<div class="row">
@@ -39,8 +39,8 @@
 			</div>
 		</div>
 		<div>
-			<h2>Pay Outs</h2>
-			<table class="table table-bordered td">
+			<h2><strong>Pay Outs</strong></h2>
+			<table class="table table-bordered table-condensed">
 				<thead>
 					<tr>
 						<th>Hand</th>
