--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h2><strong>Balance:</strong> <span id="balance"></span></h2>
+				<strong>Balance:</strong> <span id="balance"></span>
 			</div>
 			<div class="col-md-6 text-center">
 				<h2 id='handResult'></h2>
 			</div>
 			<div class="col-md-6 text-right">
-				<h2><strong>Bet:</strong> <input type="number" id="bet"/></h2> 
+				<strong>Bet:</strong> <input type="number" id="bet"/> 
 			</div>
 		</div>
 		<div class="row">
